--- a/src/app/mindergasnl/mindergasnl.component.html
+++ b/src/app/mindergasnl/mindergasnl.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>MinderGas.nl <sup><a href="http://mindergas.nl/" target="_blank"><i class="fas fa-external-link-alt fa-xs"></i></a></sup></h1>
+  <h1>MinderGas.nl <sup><a href="http://mindergas.nl/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt fa-xs"></i></a></sup></h1>
 </div>
 
 <form [formGroup]="form" class="form-horizontal" autocomplete="off" novalidate (submit)="save()">
